...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_layout"
    tools:context="com.seguetech.zippy.fragments.SearchFragment">


    <RelativeLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
...
