...
            android:text="@string/a_to_z"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/ascending"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

...
            android:text="@string/z_to_a"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/descending"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>


...
