...
    <string name="save_medicine_failed">Could not save \'%1$s\' to cabinet \'%2$s\'. An error has occurred.</string>
    <string name="deleted_medicine">\'%1$s\' has been deleted from cabinet \'%2$s\'.</string>
    <string name="delete_medicine_failed">Could not delete \'%1$s\' from cabinet \'%2$s\'. An error has occurred.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait …</string>
    <string name="created_cabinet">Cabinet \'%1$s\' has been created.</string>
    <string name="sort">Sort</string>
    <string name="sort_settings">Sort Settings</string>
    <string name="about">About</string>
    <string name="too_many_results">Displaying partial results. Found %1$s matches.</string>
    <string name="title_activity_about">About</string>
    <string name="dose">Dose</string>
    <string name="side_effects">Side Effects</string>
    <string name="interactions">Interactions</string>
    <string name="get_meducated">Get meducated on over the counter meds and prescriptions you and your family are taking!</string>
...
